@@ -5,7 +5,7 @@ values make it suitable for bacterial and archaeal profiling in 454 and Illumina
 datasets.
 
 Three types of input files are necessary:
-1/ SFF (or FASTQ) files containing the amplicon reads.
+1/ SFF (or FASTQ) files containing the amplicon reads (can be gziped)
 2/ 2-column tabular mapping files indicating the multiplex identifiers (MIDs)
    used for each sample.
 3/ FASTA file containing the primers used. The primer from which sequencing
