@@ -4,6 +4,7 @@
 // sequences from the desired samples and put them in a single FASTQ file.
 // Usage example:
 //    bpipe run hitman_hire G67.sff G67.tmapping G72.sff G72.tmapping
+//    bpipe run hitman_hire G67_L.fastq G67_R.fastq G72_L.fastq G72_R.fastq
 
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -11,21 +12,16 @@
 about title: "hitman_hire - Prepare amplicons for analysis" 
 
 
-//Bpipe.run {
-//   "%.*" * [
-//      qmapping2mcf + split_sff_libraries + "%.sff" * [ sff2fastq + rename_seqs ]
-//   ] + cat_files + final_report
-//}
-
-
 Bpipe.run {
+   "%" * [ gunzip + sff2fastq ] +
    "%.*" * [
-      sff2fastq + split_fastq_libraries + "%.fastq" * [ rename_seqs ]
+      split_fastq_libraries + "%.fastq" * [ rename_seqs ]
    ] + cat_files + final_report
 }
 
 
-// now, for SFF         :    qmapping2tmapping +  sff2fastq  +                 split_fastq_libraries + "%.fastq" * [ rename_seqs ]
-// but if input is FASTQ:    qmapping2tmapping + [sff2fastq] +                 split_fastq_libraries + "%.fastq" * [ rename_seqs ]
-// then add read pairing:    qmapping2tmapping + [sff2fastq] + [merge_pairs] + split_fastq_libraries + "%.fastq" * [ rename_seqs ]
-// in the future, it's even better if user input can be tmapping files...
+// now:              [sff2fastq] +                  split_fastq_libraries  + "%.fastq" * [ rename_seqs ]
+// then:  [gunzip] + [sff2fastq] +                  split_fastq_libraries  + "%.fastq" * [ rename_seqs ]
+// then:             [sff2fastq] + [merge_pairs] +  split_fastq_libraries  + "%.fastq" * [ rename_seqs ]
+// then:             [sff2fastq] + [merge_pairs] + [split_fastq_libraries] + "%.fastq" * [ rename_seqs ]
+
