@@ -5,6 +5,7 @@ x.x xxxx-xx-xx
  - Input can now be SFF or FASTQ files
  - Argument --input is now used for all scripts to provide sequences
  - hitman_hire now has a --mapping argument separate from --input
+ - Support for GZIP-compressed input files
 
 0.1 2014-03-13
  - Initial version
